src/webui/client/css/application.css
body {
    margin-top: 52px;
}

.input-group-addon,
.btn {
    color: #fff;
    text-transform: uppercase;
    font-family: 'Yantramanav', 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    border: none;
    font-size: 16px;
    height: 39px;
    padding: 7px 16px;
}

.input-group-addon,
.btn-default {
    border: #5b6777 1px solid;
    background-color: #182933;
}

.btn-default:hover,
.btn-default:active,
.btn-default.active,
.btn-default:focus {
    background-color: #1D262D;
    border-color: #6cadd3;
}


.btn:active, .btn:focus, .btn:active, .btn.active {
    outline: none !important;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.btn-default:active, .btn-default:focus, .btn-default.active {
    outline: none !important;
    -webkit-box-shadow: none;
    box-shadow: none;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: 'Yantramanav', 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    text-transform: uppercase;
    color: #a2aaad;
}

h1, .h1 {
    color: #6cadd3;
    font-size: 48px;
    text-transform: none;
}

h2, .h2 {
    font-size: 24px;
}

.form-control::-webkit-input-placeholder {
    color: #a2aaad;
}

.form-control:-moz-placeholder {
    color: #a2aaad;
}

.form-control::-moz-placeholder {
    color: #a2aaad;
}

.form-control:-ms-input-placeholder {
    color: #a2aaad;
}

.ui-widget-content {
    background: #5A6770;
}

.ui-slider-range {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,6cadd3+100 */
    background: #ffffff; /* Old browsers */
    background: -moz-linear-gradient(top, #ffffff 0%, #6cadd3 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #ffffff 0%, #6cadd3 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #ffffff 0%, #6cadd3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#6cadd3', GradientType=0); /* IE6-9 */
}

#navbar {
    border-bottom: 2px solid #6cadd3;
    z-index: 9999999;
    margin: 0;
}

.bootbox {
    z-index: 99999999;
}

#navbar-container {
    padding: 5px 15px;
}

#logo {
    margin-top: 3px;
    padding-right: 10px;
    height: 20px;
}

nav.navbar {
    -moz-box-shadow: 1px 1px 5px 0 #182934;
    -webkit-box-shadow: 1px 1px 5px 0 #182934;
    box-shadow: 1px 1px 5px 0 #182934;
}

#app-nav .nav {
    margin-top: 7px;
}

.navbar-default .navbar-nav > li {
    margin-right: 10px;
    text-align: center;
}

.navbar-default .navbar-nav > li > a,
.navbar-default .navbar-nav > li > button {
    font-size: 17px;
    padding: 5px;
    color: #a2aaad;
    border-bottom: 1px solid transparent;
    display: inline-block;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus,
.navbar-default .navbar-nav > li > button:hover,
.navbar-default .navbar-nav > li > button:focus{
    background: inherit;
    color: #FFF;
    border-bottom: 1px solid #6cadd3;
}

.ui-slider {
    height: 39px;
    line-height: 39px;
    color: #182934;
}

.container {
    position: relative;
}

.text-muted {
    color: #738392;
}

.glyphicon.white {
    color: #CCC;
}

.app-page {
    display: none;
}

.expression-button, .app-animation-button, .animation-control {
    margin: 0 5px 5px 0;
    padding: 5px 10px;
}

.app-animation-button {
    width: 90px;
}

.animation-control {
    margin: 0;
    width: 58px;
}

#notifications {
    margin-top: 10px;
}

#notifications .label {
    cursor: pointer;
    font-size: 12px;
}

#app-page-interaction {
    padding-top: 20px;
}

.app-expressions.expression-buttons div {
    float: left;
}

.ui-state-highlight {
    list-style: none;
    height: 132px;
    padding: 5px;
    background: #323F48;
    border: solid 1px #5cb85c;
}

.ui-sortable-helper {
    background-color: #182934;
    border: solid 1px #5cb85c;
    padding: 10px 5px 5px;
}

.top-buffer {
    margin-top: 20px;
}

.bottom-buffer {
    margin-bottom: 20px;
}

.ui-slider-handle {
    -ms-touch-action: none;
    touch-action: none;
}

.tooltip-inner {
    background-color: #323F48;
}

.tooltip.left .tooltip-arrow {
    border-left-color: #323F48;
}

.panel-body {
    background-color: #182934;
    border: 1px solid #485563;
}

.container-fluid .container-fluid {
    padding: 0;
}

/*
Styling for JsonEditor slider extension
*/
[data-schematype="slider"] .form-group {
    position: relative;
}

[data-schematype="slider"] label {
    display: block;
}

[data-schematype="slider"] input {
    position: absolute;
    left: 0;
    width: 100px;
}

[data-schematype="slider"] .ui-slider {
    height: 39px;
    margin-left: 110px;
}

.nav-tabs {
    border-bottom: 1px solid #323F48;
}

.navbar-brand {
    max-width: 500px;
    width: auto;
    font-family: "Yantramanav", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 30px;
    line-height: 30px;
}

.select2-container {
    margin: 0;
    padding: 0;
    min-width: 150px;
}

.select2-container--disabled .select2-selection__arrow {
    display: none;
}

span.select2-selection.select2-selection--single {
    outline: none;
}

.select2-container {
    color: #444;
}

.select2-selection,
.select2-selection > span {
    height: 39px !important;
    line-height: 39px !important;
}

.select2-dropdown, .popover {
    z-index: 999999999;
}

.ps-container.ps-in-scrolling, .ps-container:hover.ps-in-scrolling {
    pointer-events: auto !important;
}

